--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body>https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg?auto=compress&cs=tinysrgb&w=400
+	<img src="" alt="image of a dog">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
